# biomed-grant-writing-team

./: README.md  pyproject.toml  swarm.py
src/: model.py
src/agents/: commercialize.py  grant_writing.py  product_requirements.py  risk_analysis.py  user_needs.py
src/tools/: utilities.py
